--- a/trunk/LaTeX/Rapport - NIX PILLE/Rapport.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/Rapport.tex
@@ -1,4 +1,4 @@
-\input{preamble}
+\input{../preamble}
 
 \begin{document}	% Starter dokumentet - obligatorisk
 
@@ -35,68 +35,32 @@
 
 %%%% Rapportindhold %%%%
 \chapter{Introduction} 
-\input{formalia/Preface.tex}
-\chapter{Problem Analysis}
-\input{indhold/problemanalysis/Introduction.tex}
-\input{indhold/problemanalysis/Whywehavepassports.tex}
+%mangler
 
-\input{indhold/problemanalysis/Biometricpassphoto.tex}
-\input{indhold/problemanalysis/Requirementstophoto.tex}
-\input{indhold/problemanalysis/Problemswithphotos.tex}
-\input{indhold/problemanalysis/Otherpassportphotoprograms.tex}
-\input{indhold/problemanalysis/Thesisstatement.tex}
-\input{indhold/problemanalysis/Method.tex}
+\chapter{Problem Analysis}
 
 \chapter{Theory}
-\input{indhold/theory/Introductiontheory.tex}
-\input{indhold/theory/Photoeditingthroughtime.tex}
-\input{indhold/theory/Imageeditingtoday.tex}
-\input{indhold/theory/Photoanalysis.tex}
-\input{indhold/theory/Librariescomparison.tex}
-\input{indhold/theory/Libjpeg.tex}
-\input{indhold/development/Pixeltoinch.tex}
+
 
 \chapter{Design}
-\input{indhold/design/Introdesign.tex}
-\input{indhold/problemanalysis/Targetgroupanalysis.tex}
-\input{indhold/problemanalysis/Specificationrequirement.tex}
-\input{indhold/problemanalysis/Problemsolution.tex}
-\input{indhold/design/Programplanning.tex}
 
 
 \chapter{Development}
-\input{indhold/development/Forwordtoprogramdecription.tex}
-\input{indhold/development/Descriptionofthescalingmarks.tex}
-\input{indhold/development/Findingthehead.tex}
-\input{indhold/development/Markhead.tex}
-\input{indhold/development/Funktiontilkorrektforhold.tex}
-\input{indhold/development/FunktiontilatberegneDPI.tex}
-\input{indhold/development/Lightdarkfunc.tex}
-\input{indhold/development/Functioncrop.tex}
-\input{indhold/development/Askingandgettinganswer.tex}
-
-\input{indhold/development/Instructionmanual.tex}
 
 
 \chapter{Testing} 
-\input{indhold/testing/Purposeoftesting.tex}
-\input{indhold/testing/Testperson.tex}
-\input{indhold/testing/Choiceofsurveymethodandwhyuseit.tex}
-\input{indhold/testing/Testoftheprogram.tex}
-\input{indhold/testing/Secondtestoftheprogram.tex}
+
 
 \chapter{Discussion}
-\input{indhold/discussion/Introtodiscussion.tex}
-\input{indhold/discussion/Discussion.tex}
-\input{indhold/discussion/Perspectivation.tex}
 
-\input{formalia/Conclusion.tex}
+
+%conclusion mangler
 
 %%%% Kilder %%%%
 
 \begingroup
 	\raggedright
-	\bibliography{bibtex/litteratur}	% Litteraturlisten
+	\bibliography{../BibTex/sources}	% Litteraturlisten
 \endgroup
 
 %%%% Fixme-listen %%%%
@@ -115,9 +79,7 @@
 
 
 %%%% Appendiks %%%%
-\input{indhold/appendix/Questionnaire.tex}
-\input{indhold/appendix/Mindmap.tex}
-\input{indhold/appendix/projektforslag.tex}
+
 %%%% Bilag %%%%
 
 \end{document}																								% Slutter dokumentet - obligatorisk
