--- a/trunk/LaTeX/Klar til at blive rettet af andre/Luggage rules.tex
+++ b/trunk/LaTeX/Klar til at blive rettet af andre/Luggage rules.tex
@@ -11,6 +11,15 @@ Extra luggage\\
 Dimensions\indent\indent\indent\indent 158-277 cm (Height+Width+Depth)\\
 Weight \indent\indent\indent \indent\indent  20-45 kg
 \\
+Items usually not allowed in the checked-in luggage:
+Explosives, corrosive and flammable compounds e.g. gas, methylated spirit, paint and the like  
+Oxygenated, toxic and radioactive compounds 
+Flammable gases 
+Magnetic materials 
+Fireworks 
+Sedatives 
+Bleach 
+Paint
 \\
 Carry on\\
 Approved items: Liquids, perfume, gel and spray – max. 100 millilitres – equal to one decilitre pr. container
