--- a/LaTeX/BibTeX/sources.bib
+++ b/LaTeX/BibTeX/sources.bib
@@ -1,6 +1,22 @@
 % This file was created with JabRef 2.7.2.
 % Encoding: Cp1252
 
+@MISC{SAS,
+  author = {SAS Airline},
+  title = {Checked-in luggage},
+  owner = {Kasper},
+  timestamp = {2012.02.10},
+  url = {http://www.sas.dk/Charter/Bagage/Indchecket-bagage/?vst=true}
+}
+
+@MISC{Prohibited_Luggage,
+  author = {Copenhagen Airlines},
+  howpublished = {Internet},
+  owner = {Kasper},
+  timestamp = {2012.02.10},
+  url = {http://www.cph.dk/CPH/DK/MAIN/Foer+afrejse/Bagage/Indskrevet+bagage.htm}
+}
+
 @MISC{newrules,
   author = {Crete-Kreta},
   title = {New rules for hand luggage at all EU airports},
@@ -10,6 +26,14 @@
   owner = {Dagowich},
   timestamp = {2012.02.08},
   url = {http://www.crete-kreta.com/new-rules-hand-luggage-all-eu-airports}
+}
+
+@MISC{General_rules,
+  author = {Danksflyferie},
+  title = {General luggage rules},
+  owner = {Kasper},
+  timestamp = {2012.02.10},
+  url = {http://www.danskflyferie.dk/infovilkaar-bagageregler.html}
 }
 
 @comment{jabref-meta: selector_review:}
