--- a/trunk/LaTeX/Klar til at blive rettet af andre/Luggage rules.tex
+++ b/trunk/LaTeX/Klar til at blive rettet af andre/Luggage rules.tex
@@ -23,9 +23,9 @@ Paint
 \\
 Carry on\\
 Approved items: Liquids, perfume, gel and spray – max. 100 millilitres – equal to one decilitre pr. container
-You are allow to bring more containers (bottles, cans, tubes and so on), but they have to be contained in a transparent plastic bag, which have to be closed (1 1 litre bag per passenger)
+You are only allow to bring these containers (bottles, cans, tubes and so on), if they are contained in a transparent plastic bag, which have to be closed (1 litre bag per passenger)
 The bag have to be resealable.
-Past security wares can be purchased (including spirits, perfume and other liquids). Wares are handed out in sealed bags, these bags may only be opened after the final destination have been reached.
+Past security, wares can be purchased (including spirits, perfume and other liquids). Wares are handed out in sealed bags, these bags may only be opened after the final destination have been reached.
 It is now a requirement that you take off your overcoat, take laptops and other larger electronic devices out of the bag before the security check-in.
 \\
 \\
