--- a/trunk/LaTeX/BibTeX/sources.bib
+++ b/trunk/LaTeX/BibTeX/sources.bib
@@ -36,6 +36,14 @@
   url = {http://www.danskflyferie.dk/infovilkaar-bagageregler.html}
 }
 
+@MISC{Why-rules,
+  author = {EU-Kommisionen},
+  title = {Bagage rules released},
+  owner = {Kasper},
+  timestamp = {2012.02.13},
+  url = {http://europa.eu/rapid/pressReleasesAction.do?reference=MEMO/06/363&format=HTML&aged=0&language=EN&guiLanguage=en}
+}
+
 @comment{jabref-meta: selector_review:}
 
 @comment{jabref-meta: selector_publisher:}
