--- a/trunk/LaTeX/BibTeX/sources.bib
+++ b/trunk/LaTeX/BibTeX/sources.bib
@@ -11,6 +11,7 @@
 
 @MISC{Prohibited_Luggage,
   author = {Copenhagen Airlines},
+  title = {Prohibited Items},
   howpublished = {Internet},
   owner = {Kasper},
   timestamp = {2012.02.10},
@@ -42,6 +43,14 @@
   owner = {Kasper},
   timestamp = {2012.02.13},
   url = {http://europa.eu/rapid/pressReleasesAction.do?reference=MEMO/06/363&format=HTML&aged=0&language=EN&guiLanguage=en}
+}
+
+@ARTICLE{Stricter_rules,
+  author = {New York Times},
+  title = {After the attacks},
+  owner = {Kasper},
+  timestamp = {2012.02.14},
+  url = {http://www.nytimes.com/2001/09/13/us/after-attacks-airport-security-faa-announces-stricter-rules-knives-no-longer.html}
 }
 
 @comment{jabref-meta: selector_review:}
