--- a/LaTeX/Klar til at blive rettet af andre/Luggage rules.tex
+++ b/LaTeX/Klar til at blive rettet af andre/Luggage rules.tex
@@ -1,34 +1,58 @@
 \section{Luggage rules}
-Charter trips\\
-\\
-Check-in luggage\\
+
+\subsection{Charter trips on airplanes}
+
+Check-in luggage
+\newline
 Dimension limit\indent\indent\indent 158 cm (Height+Width+Depth)
-\\
+\newline
 Weight limit\indent\indent\indent\indent 1 suitcase x 20-23 kg
-\\
-\\
-Extra luggage\\
-Dimensions\indent\indent\indent\indent 158-277 cm (Height+Width+Depth)\\
+\newline\newline
+Extra luggage
+\newline
+Dimensions\indent\indent\indent\indent 158-277 cm (Height+Width+Depth)
+\newline
 Weight \indent\indent\indent \indent\indent  20-45 kg
-\\
+\newline\newline
 Items usually not allowed in the checked-in luggage:
+\newline
 Explosives, corrosive and flammable compounds e.g. gas, methylated spirit, paint and the like  
+\newline
 Oxygenated, toxic and radioactive compounds 
+\newline
 Flammable gases 
+\newline
 Magnetic materials 
+\newline
 Fireworks 
+\newline
 Sedatives 
+\newline
 Bleach 
+\newline
 Paint
-\\
-Carry on\\
+\newline\newline
+Carry on
 Approved items: Liquids, perfume, gel and spray – max. 100 millilitres – equal to one decilitre pr. container
 You are only allow to bring these containers (bottles, cans, tubes and so on), if they are contained in a transparent plastic bag, which have to be closed (1 litre bag per passenger)
 The bag have to be resealable.
+\newline
 Past security, wares can be purchased (including spirits, perfume and other liquids). Wares are handed out in sealed bags, these bags may only be opened after the final destination have been reached.
+\newline
 It is now a requirement that you take off your overcoat, take laptops and other larger electronic devices out of the bag before the security check-in.
-\\
-\\
+\newline\newline
 Dimension limit \indent\indent\indent	Height 50-55 cm + Width 40 cm + Depth 18-25 cm
-\\
+\newline
 Weight limits\indent\indent\indent\indent		5-8 kg
+
+\subsection{Rules on trains}
+
+There are different rules depending on which traincompany you are using. 
+\newline
+Take DSB as an eksample. They have very few rules reguarding the luggage you are allowed to bring with you. 
+\newline\newline
+Dimensions\indent\indent\indent\indent 100 x 60 x 30 cm 
+\newline\newline
+The only other rule is that your luggage need to be able to lie on the luggage rack or under the seat and not be bothering or putting any other person on the train in danger. (http://www.dsb.dk/kundeservice/service-i-toget/bagage/)
+\newline\newline
+Another eksample could be Indian Railways where the luggage is allowed to have different weight depending on which class you are on. They have no other rules reguarding luggage. (http://www.trainenquiry.com/StaticContent/Railway\_Amnities/E\_R/LUGGAGE.aspx)
