--- a/LaTeX/BibTeX/sources.bib
+++ b/LaTeX/BibTeX/sources.bib
@@ -1,4 +1,4 @@
-% This file was created with JabRef 2.7.2.
+% This file was created with JabRef 2.7.1.
 % Encoding: Cp1252
 
 @MISC{SAS,
@@ -16,6 +16,16 @@
   owner = {Kasper},
   timestamp = {2012.02.10},
   url = {http://www.cph.dk/CPH/DK/MAIN/Foer+afrejse/Bagage/Indskrevet+bagage.htm}
+}
+
+@MISC{danskecharter,
+  author = {Henrik Baumgarten},
+  title = {Det solgte de danske chartarbureauer sidste år},
+  month = {02},
+  year = {2012},
+  owner = {Aleksander},
+  timestamp = {2012.02.14},
+  url = {http://www.takeoff.dk/news/22548}
 }
 
 @MISC{newrules,
@@ -45,12 +55,31 @@
   url = {http://europa.eu/rapid/pressReleasesAction.do?reference=MEMO/06/363&format=HTML&aged=0&language=EN&guiLanguage=en}
 }
 
+@MISC{altombag,
+  author = {SAS},
+  title = {Bagageovervægt},
+  year = {2012},
+  owner = {Aleksander},
+  timestamp = {2012.02.14},
+  url = {http://www.sas.dk/Alt-om-rejsen/Bagage/Bagageovervagt/?WT.ac=AOR-DK-bg-overvaegt}
+}
+
 @ARTICLE{Stricter_rules,
   author = {New York Times},
   title = {After the attacks},
   owner = {Kasper},
   timestamp = {2012.02.14},
   url = {http://www.nytimes.com/2001/09/13/us/after-attacks-airport-security-faa-announces-stricter-rules-knives-no-longer.html}
+}
+
+@MISC{airstat,
+  author = {Bureau of Transportation Statistics (RITA)},
+  title = {Baggage fees by airline},
+  month = {23 jan},
+  year = {2012},
+  owner = {Aleksander},
+  timestamp = {2012.02.14},
+  url = {http://www.bts.gov/programs/airline_information/baggage_fees/}
 }
 
 @comment{jabref-meta: selector_review:}
