--- a/LaTeX/Undervejs/problem afsnit af aleksander.tex
+++ b/LaTeX/Undervejs/problem afsnit af aleksander.tex
@@ -1,5 +1,5 @@
 \subsection{Problem}
-In modern society, families or groups of friends tend to take on vacation trips too other destination to relax and enjoy their vacation or explore the world \citep{danskecharter}.
+In modern society, families or groups of friends tend to take on vacation trips to other destination to relax and enjoy their vacation or explore the world \citep{danskecharter}.
 With vacation trips comes packing luggage which plays a role regarding the journey. The size and weight of the luggage is determined by the time of the stay and the purpose of the trip or simply bad distribution of the bags contents.
 
 When travelling with heavy, many, or both many and heavy bags it can be frustrating to carry ones luggages over larger distance and it can be hard to manoeuvre with large luggage if the room is permeated or just narrow in general. Even more important is that a too large or too heavy luggage can trigger a fee. The size of the fee is informed on the airlines website and can varies from airline to airline \citep{altombag}.
@@ -18,4 +18,4 @@ It seems people often pack their luggage more compact instead of taking extra ba
 
 \citep{airstat} shows the amount fees given in context to luggage that have been registered at the U.S. airlines. Through these statistics it is possible to see that there are people that exceeds the set of limits given by the airline. A note regarding this source is that it is the fee amount is a combination of the different rules and the related fees. Therefore the statistics do not give accurate image of weight limit but more a image of that there is a problem in general with luggage exceeds the given limits.
 
-The problem with packing luggage is applied to most kind of transport if it is train, car, or flights. But flights is the one transport were is plays biggest role for the consumer because it have economical consequences. Train and car the consumer is the only one to define how heavy luggage may be but there is restriction too how big the bags must be. For train it is 100 x 60 x 30 cm (kilde = http://www.dsb.dk/kundeservice/service-i-toget/bagage/), for cars it is size of the car and number of passages that defines the size for how big the bags must be...
+The problem with packing luggage is applied to most kind of transport if it is train, car, or flights. But flights is the one transport were is plays biggest role for the consumer because it have economical consequences. Train and car the consumer is the only one to define how heavy luggage may be but there is restriction to how big the bags must be. For train it is 100 x 60 x 30 cm (kilde = http://www.dsb.dk/kundeservice/service-i-toget/bagage/), for cars it is size of the car and number of passages that defines the size for how big the bags must be...
