--- a/trunk/LaTeX/Klar til at blive rettet af andre/Luggage rules.tex
+++ b/trunk/LaTeX/Klar til at blive rettet af andre/Luggage rules.tex
@@ -1,6 +1,6 @@
 \section{Luggage rules}
 
-\subsection{Charter trips on airplanes}
+\subsection{Charter trips on air planes}
 
 Check-in luggage
 \newline
@@ -47,12 +47,12 @@ Weight limits\indent\indent\indent\indent		5-8 kg
 
 \subsection{Rules on trains}
 
-There are different rules depending on which traincompany you are using. 
+There are different rules depending on which train company you are using. 
 \newline
-Take DSB as an eksample. They have very few rules reguarding the luggage you are allowed to bring with you. 
+Look at the Danish train company, DSB, for example. They have very few rules regarding the luggage you are allowed to bring with you. 
 \newline\newline
 Dimensions\indent\indent\indent\indent 100 x 60 x 30 cm 
 \newline\newline
 The only other rule is that your luggage need to be able to lie on the luggage rack or under the seat and not be bothering or putting any other person on the train in danger. (http://www.dsb.dk/kundeservice/service-i-toget/bagage/)
 \newline\newline
-Another eksample could be Indian Railways where the luggage is allowed to have different weight depending on which class you are on. They have no other rules reguarding luggage. (http://www.trainenquiry.com/StaticContent/Railway\_Amnities/E\_R/LUGGAGE.aspx)
+Another example could be Indian Railways where the luggage is allowed to have different weight depending on which class you are on. They have no other rules regarding luggage. (http://www.trainenquiry.com/StaticContent/Railway\_Amnities/E\_R/LUGGAGE.aspx)
