--- a/LaTeX/Klar til at blive rettet af andre/solutionsonmarket.tex
+++ b/LaTeX/Klar til at blive rettet af andre/solutionsonmarket.tex
@@ -1,3 +1,3 @@
 \section{Solutions on the market}
 
-The amount of programs on the market wanting to help you while traveling is huge. But all of them are programs with checking lists and not anything about how you best pack all the things in the suitcase or programs that has nothing to do with luggage. The most advanced program found in the research was also a listing program but this could also calculate the total weight of your luggage, if you type the weight of each of the different items in the program. So there is not really a program on the market that can solve the problem. (PackList Lite)
+The amount of programs on the market, wanting to help you while travelling, is huge. But all of them are programs with checking lists and not anything about how you pack all the things the most suitable way in the suitcase, or programs that has nothing to do with luggage\fxfatal{ordstilling}. The most advanced program found in the research was also a listing program but this could also calculate the total weight of your luggage, if you type the weight of each of the different items in the program. So there is not really a program on the market that can solve the problem. (PackList Lite)
