--- a/trunk/LaTeX/BibTeX/sources.bib
+++ b/trunk/LaTeX/BibTeX/sources.bib
@@ -1,6 +1,14 @@
 % This file was created with JabRef 2.7.1.
 % Encoding: Cp1252
 
+@MISC{idianrules,
+  author = {Indian railways},
+  title = {luggage rules},
+  owner = {Aleksander},
+  timestamp = {2012.02.16},
+  url = {http://www.trainenquiry.com/StaticContent/Railway_Amnities/E_R/LUGGAGE.aspx}
+}
+
 @MISC{SAS,
   author = {SAS Airline},
   title = {Checked-in luggage},
