--- a/trunk/LaTeX/Undervejs/problem afsnit af aleksander.tex
+++ b/trunk/LaTeX/Undervejs/problem afsnit af aleksander.tex
@@ -18,4 +18,12 @@ It seems people often pack their luggage more compact instead of taking extra ba
 
 \citep{airstat} shows the amount fees given in context to luggage that have been registered at the U.S. airlines. Through these statistics it is possible to see that there are people that exceeds the set of limits given by the airline. A note regarding this source is that it is the fee amount is a combination of the different rules and the related fees. Therefore the statistics do not give accurate image of weight limit but more a image of that there is a problem in general with luggage exceeds the given limits.
 
-The problem with packing luggage is applied to most kind of transport if it is train, car, or flights. But flights is the one transport were is plays biggest role for the consumer because it have economical consequences. Train and car the consumer is the only one to define how heavy luggage may be but there is restriction to how big the bags must be. For train it is 100 x 60 x 30 cm (kilde = http://www.dsb.dk/kundeservice/service-i-toget/bagage/), for cars it is size of the car and number of passages that defines the size for how big the bags must be...
+The problem with packing luggage is applied to most kind of transport if it is train, car, or flights. But flights is the one transport were is plays biggest role for the consumer because it have economical consequences. Train and car the consumer is the only one to define how heavy luggage may be but there is restriction to how big the bags must be. For train it is 100 x 60 x 30 cm \citep{rulestrain}, for cars it is size of the car and number of passages that defines the size for how big the bags must be.
+
+On a vacation there can be many good experiences and memories. A memory tends to be bound to photos, item and souvenirs and thereby make it easier to remember. Photos and souvenirs also have a certain value and can be used to fill ones home with memories about the past experiences.
+With this in the mind, it is important to make room for possible souvenirs or other things that were irresistible not to buy.
+
+As there earlier have been mentioned the weight and size of the luggage were a problem before the takeoff, therefore it must mean that it also will problem on the trip home.
+This means that if a family packs just to the limits and then buys things and souvenirs on their vacation they will into trouble at the airport.
+
+So the general problem is packing of the bags in the must optimal way and spread the weight in the best way in the available bags. It can also be difficult to while packing comprehend and take some space for possible souvenirs or other goods
