--- a/trunk/LaTeX/BibTeX/sources.bib
+++ b/trunk/LaTeX/BibTeX/sources.bib
@@ -1,4 +1,4 @@
-% This file was created with JabRef 2.7.1.
+% This file was created with JabRef 2.7.2.
 % Encoding: Cp1252
 
 @MISC{idianrules,
@@ -63,7 +63,7 @@
   url = {http://www.dsb.dk/kundeservice/service-i-toget/bagage/}
 }
 
-@MISC{Why-rules,
+@MISC{Why_rules,
   author = {EU-Kommisionen},
   title = {Bagage rules released},
   owner = {Kasper},
