--- a/LaTeX/Undervejs/thesis statement.tex
+++ b/LaTeX/Undervejs/thesis statement.tex
@@ -1,45 +1,32 @@
 \subsection{Thesis Statement}
-In this section there will be formed a thesis statement that we can use to developed a method to work with this problem and to get a more precise problem to work with. The method is used to try and solve the problem that is stated in the thesis statement.
+In this section a thesis statement will be formulated and will be used to develop a method to this problem and to get a more precise problem to work with. The method is used to try and solve the problem stated in the thesis statement.
 
 \begin{itemize}
 \item Is it possible to develop a program that helps the customer through the progress of packing one or more suitcases the most effective way?
 \end{itemize}
 
-The meaning of this thesis statement is to research and develop a program that in some way should handle the problem and all the calculation that lies in the problem. But the consumer also plays a role in the problem.
-Therefore the consumer must also be taken into account when are being developed. What is meant by this is that the program must formed so it should be easy for the target group to handle it.
+The meaning of this thesis statement is to research and develop a program that in some way could handle the problem and all the calculation that lies in the problem. But the consumer also plays a role in the problem.
+Therefore the consumer must also be taken into account when it is being developed. The reason for this is to make the program as user friendly as possible.
 
 \subsection*{Sub Statement}
 The sub statements have been made to help find a solution to the thesis statement. These sub statements describe some of the steps that need to be made in order to find the solution for the thesis statement.
 
 \begin{itemize}
-\item \textbf{How can it be checked that the weight in the suitcases are evenly spread and does not extend the allowed weight?}\\
+\item \textbf{How can it be checked that the weight in the suitcases are evenly spread and does not exceed the allowed weight?}\\
 
-The program will need to handle and solve calculation with weight and volume. Through these algorithms should the program find the must suited solution for the given data. It will also have to check that the solution weight does not exceed the given limits.
+The program will need to handle and solve calculations with weight and volume. Through these algorithms the program should find the must optimal solution for the given data. It will also have to check that the solution weight does not exceed the given limits.
 
 \item \textbf{Which functions are needed to get the program to compute the best way to fit the items into the suitcases?}\\
 
-The functions are needed for the program to find the best solution. The functions will be use an algorithm for optimising and thereby the program will fulfil its purpose.
+The functions are needed for the program to find the best solution. The functions will use an algorithm for optimising and thereby the program will fulfil its purpose.
 
 \item \textbf{How should the program communicate with the user and inform where the items are placed, and tell how much space is left?}\\
 
-The program will have to be develop and tested so the customer can fully use the program. Therefore it is important not to use advance technical language or unexplained abbreviations.
+The program will have to be developed and tested so the customer can use the program to its full extent. Therefore it is important not to use advanced technical language or unexplained abbreviations.
 
 \item \textbf{How can the program be developed so it takes the length of the journey  into account, and so you can update the program on the go?}\\
 
 The program should also be develop so it is possible for the user to update the programs database while on vacation thereby get a packing order for the new content of the bags.
 \end{itemize}
 
-From this thesis statement there will be develop a list of requirements for the program that the program will need to solve the given problem and be user friendly. The system requirements can be seen on page (blabla, en ref ting mangler)
-
-krav til program
--	How to distribute the weight.
--	How to get all the things to fit into the suitcase.
--	Take into account the length of the journey.
--	User should be able to chance info in the program on the road.
--	Program should be able to tell how much space is left.
--	Check luggage follows the security rules.
--	Program should tell where a person’s things are in the suitcases if ones things are spread in more than one suitcase.
--	Most of ones things in own suitcase.
--	Can the things be packed in different sizes?
--	Packing list
-
+From this thesis statement there will be develop a list of requirements for the program, which it will need to solve the given problem and be user friendly. The system requirements can be seen on page (blabla, en ref ting mangler)
