--- a/trunk/LaTeX/Undervejs/Luggage rules (2).tex
+++ b/trunk/LaTeX/Undervejs/Luggage rules (2).tex
@@ -3,16 +3,20 @@
 \subsection{Charter trips on air planes}
 
 Check-in luggage
+\begin{table}[H]
+\begin{center}
+\begin{tabular}{c  c | c}
+Dimension limit & 158 cm (Height+Width+Depth)
 \newline
-Dimension limit\indent\indent\indent 158 cm (Height+Width+Depth)
-\newline
-Weight limit\indent\indent\indent\indent 1 suitcase x 20-23 kg
+Weight limit & 1 suitcase x 20-23 kg
 \newline\newline
 Extra luggage
 \newline
 Dimensions\indent\indent\indent\indent 158-277 cm (Height+Width+Depth)
 \newline
 Weight \indent\indent\indent \indent\indent  20-45 kg
+\end{tabular}
+\end{center}
 \newline\newline
 Items usually not allowed in the checked-in luggage:
 \newline
