--- a/LaTeX/Undervejs/Risk factors.tex
+++ b/LaTeX/Undervejs/Risk factors.tex
@@ -1,5 +1,7 @@
 \subsection{The risk factors about luggage handling}
 
+It is known that wrong kinds of lifting can lead to back disorders such as 
+
 There are 4 main risks when the airport personal are transporting your luggage from the terminal onto the plane:
 
 \begin{itemize}
