--- a/trunk/LaTeX/Undervejs/thesis statement.tex
+++ b/trunk/LaTeX/Undervejs/thesis statement.tex
@@ -1,9 +1,10 @@
 \subsection{Thesis Statement}
-In this section a thesis statement will be formulated and will be used to develop a method to this problem and to get a more precise problem to work with. The method is used to try and solve the problem stated in the thesis statement.
+In this section a thesis statement will be formulated which will be used to develop a method to this problem and to get a more precise problem to work with. The method is used to try and solve the problem stated in the thesis statement.
 
 \begin{itemize}
 \item Is it possible to develop a program that helps the customer through the progress of packing one or more suitcases the most effective way?
 \end{itemize}
+
 
 The meaning of this thesis statement is to research and develop a program that in some way could handle the problem and all the calculation that lies in the problem. But the consumer also plays a role in the problem.
 Therefore the consumer must also be taken into account when it is being developed. The reason for this is to make the program as user friendly as possible.
@@ -16,7 +17,7 @@ The sub statements have been made to help find a solution to the thesis statemen
 
 The program will need to handle and solve calculations with weight and volume. Through these algorithms the program should find the must optimal solution for the given data. It will also have to check that the solution weight does not exceed the given limits.
 
-\item \textbf{Which functions are needed to get the program to compute the best way to fit the items into the suitcases?}\\
+\item \textbf{Which functions are needed to get the program to compute the best way to fit the items into the suitcases?}\newline
 
 The functions are needed for the program to find the best solution. The functions will use an algorithm for optimising and thereby the program will fulfil its purpose.
 
@@ -24,9 +25,9 @@ The functions are needed for the program to find the best solution. The function
 
 The program will have to be developed and tested so the customer can use the program to its full extent. Therefore it is important not to use advanced technical language or unexplained abbreviations.
 
-\item \textbf{How can the program be developed so it takes the length of the journey  into account, and so you can update the program on the go?}\\
+\item \textbf{How can the program be developed so it takes the length of the journey  into account, and enable the user to update the program on the go?}\\
 
 The program should also be develop so it is possible for the user to update the programs database while on vacation thereby get a packing order for the new content of the bags.
 \end{itemize}
 
-From this thesis statement there will be develop a list of requirements for the program, which it will need to solve the given problem and be user friendly. The system requirements can be seen on page (blabla, en ref ting mangler)
+From this thesis statement there will be developed a list of requirements for the program, which it will need to solve the given problem and be user friendly. The system requirements can be seen on page (blabla, en ref ting mangler)
