--- a/LaTeX/Undervejs/problem afsnit af aleksander.tex
+++ b/LaTeX/Undervejs/problem afsnit af aleksander.tex
@@ -1,26 +1,25 @@
-\subsection{Problem}
-In modern society, families or groups of friends tend to take on vacation trips to other destination to relax and enjoy their vacation or explore the world \citep{danskecharter}.
-With vacation trips comes packing luggage which plays a role regarding the journey. The size and weight of the luggage is determined by the time of the stay and the purpose of the trip or simply bad distribution of the bags contents.
+\section{Problem}
+In the modern society, families or groups of friends tend to take on vacation to other countries to relax and enjoy their vacation or explore the world \citep{danskecharter}.
+With vacation trips comes packing luggage which plays a role regarding the journey. The size and weight of the luggage is determined by the time of the stay and the purpose of the trip or simply how the content of the bags have been distributed.
 
-When travelling with heavy, many, or both many and heavy bags it can be frustrating to carry ones luggages over larger distance and it can be hard to manoeuvre with large luggage if the room is permeated or just narrow in general. Even more important is that a too large or too heavy luggage can trigger a fee. The size of the fee is informed on the airlines website and can varies from airline to airline \citep{altombag}.
+When travelling with many and/or heavy bags it can be frustrating to carry the luggage too far and it can be hard to manoeuvre with large luggage if the room is permeated or narrow. Also if its travel by plane, too large or too heavy luggage can trigger a fee. The size of the fee is informed on the airlines website and varies from airline to airline \citep{altombag}.
 
-Therefore it can be an advantage to pack the bags properly and limit the choose of things to take on the journey.
-This chapter will document this problem and conclude that it is a problem and thereby relevant to work with.
+Therefore it can be an advantage to pack the bags properly and limit the choice of things to take on the journey.
 
-People who are travelling with airlines and have over 23 kg in one bag will experience that they will get charge with an extra fee. This fee have been introduced so airlines bag handlers do not have to take the risk to get injuries by carry too heavy luggage.
+People who are travelling with airlines and have over 23 kg in one bag will experience that they will get charged with an extra fee. This fee have been introduced so airlines bag handlers do not have to take the risk to get injuries by carry too heavy luggage.
 
 ("Det Niels har skrevet indsættes her!")
 
-Because of the weight and size restrictions it can be difficult to pack all the cloth and accessories that were necessary to have for the trip in a limited amount of bags and it can be necessary to acquire more bags for the trip or pick less items to pack for the vacation. More luggage means a bigger cost for the flight to the desired destination. A way to dodge buying and pay for extra bags for the vacation is to pack bags more compact. This increases the bags weight. \citep{altombag}.
+Because of the weight and size restrictions it can be difficult to pack all the cloth and accessories that is necessary to have for the trip in a limited amount of bags and it can be necessary to acquire more bags for the trip or pick less items to pack for the vacation. More luggage means a bigger cost for the flight to the desired destination. A way to avoid buying and paying for extra bags for the vacation is to pack bags more compact. This on the other hand increases the bags weight. \citep{altombag}.
 
-The increased weight means the bags might exceed the limit for weight and therefore triggers a fee for overweight luggage.
-It seems people often pack their luggage more compact instead of taking extra bags with them on vacation. General people take a lot with them on vacation or might not packed their luggage optimal \citep{airstat}.
+The increased weight means the bags might exceed the limit for weight and therefore trigger a fee for overweight luggage.
+It seems people often pack their luggage more compact instead of taking extra bags with them on vacation. Generally people take a lot with them on vacation or might not have packed their luggage optimal \citep{airstat}.
 
-\citep{airstat} shows the amount fees given in context to luggage that have been registered at the U.S. airlines. Through these statistics it is possible to see that there are people that exceeds the set of limits given by the airline. A note regarding this source is that it is the fee amount is a combination of the different rules and the related fees. Therefore the statistics do not give accurate image of weight limit but more a image of that there is a problem in general with luggage exceeds the given limits.
+\citep{airstat} shows the amount of fees given in context to luggage that have been registered at the U.S. airlines. Through these statistics it is possible to see that there are people that exceeds the set of limits given by the airline. A note regarding this source is that the fee amount is a combination of the different rules and related fees. Therefore the statistics do not give an accurate image of weight limit but more an image of the problem in general with luggage exceeding the given limits.
 
-The problem with packing luggage is applied to most kind of transport if it is train, car, or flights. But flights is the one transport were is plays biggest role for the consumer because it have economical consequences. Train and car the consumer is the only one to define how heavy luggage may be but there is restriction to how big the bags must be. For train it is 100 x 60 x 30 cm \citep{rulestrain}, for cars it is size of the car and number of passages that defines the size for how big the bags must be.
+The problem with packing luggage is tied to most kind of transportation be it train, car, or flights. But flights is the one transport where it plays the biggest role for the consumer because it have economical consequences. With train and car the consumer is the only one to define how heavy luggage may be but there is restriction to how big the bags are allowed to be. For train it is 100 x 60 x 30 cm \citep{rulestrain}, for cars it is the size of the car and number of passages that defines the size for how big the bags can be to be safe.
 
-On a vacation there can be many good experiences and memories. A memory tends to be bound to photos, item and souvenirs and thereby make it easier to remember. Photos and souvenirs also have a certain value and can be used to fill ones home with memories about the past experiences.
+On a vacation there can be many good experiences and memories. A memory tends to be bound to photos, items and souvenirs and thereby make it easier to remember. Photos and souvenirs also have a certain value and can be used to fill ones home with memories about the past experiences.
 With this in the mind, it is important to make room for possible souvenirs or other things that were irresistible not to buy.
 
 As there earlier have been mentioned the weight and size of the luggage were a problem before the takeoff, therefore it must mean that it also will problem on the trip home.
