--- a/trunk/LaTeX/Undervejs/problem afsnit af aleksander.tex
+++ b/trunk/LaTeX/Undervejs/problem afsnit af aleksander.tex
@@ -19,10 +19,10 @@ It seems people often pack their luggage more compact instead of taking extra ba
 
 The problem with packing luggage is tied to most kind of transportation be it train, car, or flights. But flights is the one transport where it plays the biggest role for the consumer because it have economical consequences. With train and car the consumer is the only one to define how heavy luggage may be but there is restriction to how big the bags are allowed to be. For train it is 100 x 60 x 30 cm \citep{rulestrain}, for cars it is the size of the car and number of passages that defines the size for how big the bags can be to be safe.
 
-On a vacation there can be many good experiences and memories. A memory tends to be bound to photos, items and souvenirs and thereby make it easier to remember. Photos and souvenirs also have a certain value and can be used to fill ones home with memories about the past experiences.
-With this in the mind, it is important to make room for possible souvenirs or other things that were irresistible not to buy.
+On a vacation there can be many good experiences and memories. A memory tends to be bound to photos, items and souvenirs and thereby makes it easier to remember. Photos and souvenirs also have a certain value and can be used to fill the home with memories about the past experiences.
+With this in the mind, it is important to make room for possible souvenirs or other things that that simply had to be bought.
 
-As there earlier have been mentioned the weight and size of the luggage were a problem before the takeoff, therefore it must mean that it also will problem on the trip home.
-This means that if a family packs just to the limits and then buys things and souvenirs on their vacation they will into trouble at the airport.
+As it earlier have been mentioned the weight and size of the luggage were a problem before the takeoff, therefore it must mean that it also will be a problem on the trip home.
+This means that if a family packs just to the limits and then buy things and souvenirs on their vacation they will get into trouble at the airport.
 
-So the general problem is packing of the bags in the must optimal way and spread the weight in the best way in the available bags. It can also be difficult to while packing comprehend and take some space for possible souvenirs or other goods
+So the general problem is the packing of the bags in the most optimal way and spread the weight in the available bags. It can also be difficult when packing the bag to make some space for possible souvenirs or other goods.
